[package]
name = "mfs-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Durable hot storage layer for memory-first-store."

[lib]
name = "mfs_store"
path = "src/lib.rs"

[features]
default = []
json = ["dep:serde_json"]

[dependencies]
mfs-core = { path = "../mfs-core", default-features = false }
parking_lot.workspace = true
crossbeam-utils.workspace = true
crc32c.workspace = true
serde_json = { workspace = true, optional = true }

[dev-dependencies]
flate2 = "1.1"
rand.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
redb.workspace = true
fjall.workspace = true
ureq = { version = "3", features = ["gzip"] }
tempfile = "3"

[[example]]
name = "cc_wet_bench"
path = "../../examples/store/cc_wet_bench.rs"

[[example]]
name = "cc_wet_extract"
path = "../../examples/store/cc_wet_extract.rs"

[[example]]
name = "nosql_raw_kv"
path = "../../examples/store/nosql_raw_kv.rs"

[[example]]
name = "nosql_schema_mode"
path = "../../examples/store/nosql_schema_mode.rs"

[[example]]
name = "nosql_wal_recovery"
path = "../../examples/store/nosql_wal_recovery.rs"

[[example]]
name = "nosql_checkpoint_recovery"
path = "../../examples/store/nosql_checkpoint_recovery.rs"

[[example]]
name = "nosql_query"
path = "../../examples/store/nosql_query.rs"

[[bench]]
name = "mfs_store_bench"
path = "../../benches/mfs/store_bench.rs"
harness = false
