[package]
name = "mfs-sqlite-vfs-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mfs-compat = { path = "../../crates/mfs-compat" }
parking_lot = "0.12"
rusqlite = { version = "0.40", features = ["bundled", "blob"] }
sqlite-plugin = "0.10.1"

[dev-dependencies]
tempfile = "3"

[workspace]
